...
        defaults.removeObject(forKey: key)
    }
}

enum ComposerCoachStage: String, Codable, Equatable {
    case draw
    case send
    case complete
}

struct ComposerCoachProgress: Codable, Equatable {
    static let currentVersion = 1

...
