...
            ]
            if let messageID { info["messageID"] = messageID }
            return info
        case .friend(let id):
            return ["route": "friend", "id": id]
        case .sentDrawing(let messageID):
            return ["route": "sent", "messageID": messageID]
        }
    }

    init?(userInfo: [AnyHashable: Any]) {
        switch userInfo["route"] as? String {
        case "received":
...
